# Django-Svelte-Stack

./: README.md  manage.py  pyproject.toml
backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/api/: views.py
backend/api/models/: __init__.py  alumno.py
backend/project_main/: apps.py  views.py
backend/static/frontend/: bundle.css  bundle.js  bundle.js.map  global.css  login.css  rawCarrousel.js
backend/templates/plan_a/: index.html
backend/templates/registration/: login.html
frontend/: package-lock.json  rollup.config.js
frontend/public/: global.css  index.html
frontend/src/: App.svelte  Inicio.svelte
frontend/src/alumno/: Permisos.svelte
frontend/src/comun/: Error.svelte  Footer.svelte  SwitchPerfil.svelte  stores.ts
