[tool.poetry]
name = "requeriments"
version = "0.01"
description = "Inicializacion del proyecto de migracion de Mi PLan A"
authors = ["Andres Vela"]
license = "Licencia de software de privativo"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
whitenoise = "^6.2.0"
mysqlclient = "^2.1.1"
djangorestframework = "^3.13.1"
pytz = "^2022.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
